...
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/full_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
...
                        android:textStyle="bold|italic"
                        android:textAlignment="center"
                        android:padding="8dp" />

                    <!-- Select Date Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSelectBeginDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/select_date"
                        android:layout_marginBottom="8dp" />
                </LinearLayout>
...
                        android:textStyle="bold|italic"
                        android:textAlignment="center"
                        android:padding="8dp" />

                    <!-- Select Start Time Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSelectStartTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/select_time" />
                </LinearLayout>
            </LinearLayout>
...
                        android:textStyle="bold|italic"
                        android:textAlignment="center"
                        android:padding="8dp" />

                    <!-- Select Date Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSelectEndDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/select_date"
                        android:layout_marginBottom="8dp" />
                </LinearLayout>
...
                        android:textStyle="bold|italic"
                        android:textAlignment="center"
                        android:padding="8dp" />

                    <!-- Select End Time Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSelectEndTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/select_time" />
                </LinearLayout>
            </LinearLayout>
...
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no_repeat"
                    android:minHeight="35dp" />

                <RadioButton
                    android:id="@+id/radioDaily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily"
                    android:minHeight="35dp" />

                <RadioButton
...
