...
    <string name="sharedPeople">X members</string>
    <string name="sharing">Sharing</string>
    <string name="budget">Budget</string>
    <string name="select_jobs">Select Events</string>
    <string name="leftarrow">LeftArrow</string>
    <string name="rightarrow">RightArrow</string>
    <string name="events">Events</string>
    <string name="add_event">Event</string>
    <string name="expenses">Expenses</string>
    <string name="dismiss_alarm">Dismiss Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="textview">TextView</string>
    <string name="test">test</string>
    <string name="categories">Categories</string>
    <string name="enjoyment">Enjoyment</string>
...
