...
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editExpenseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/description"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
...
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editExpenseAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/amount"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
...
